--- a/game/css/layout.css
+++ b/game/css/layout.css
@@ -15,20 +15,6 @@ body {
   background-image: url('../images/git-gui.png');
 }
 
-.gui {
-  background-color: #373d47;
-  position: fixed;
-}
-
-#gui-header {
-  width: 100%;
-  height: 50px;
-}
-
-#gui-sidebar-left {
-
-}
-
 #gameContainer {
   position: absolute;
   top: 40px;
@@ -37,13 +23,15 @@ body {
   margin: auto;
   width: 800px;
   z-index: 100;
+  cursor: url('../images/cursor.png'), crosshair;
 }
 
-#gui-sidebar-right {
-
-}
-
-#gui-footer {
-  width: 100%;
-  height: 50px;
+#help {
+  position: absolute;
+  top: 200px;
+  bottom: 29px;
+  right: 0;
+  width: 250px;
+  background-color: #373d47;
+  color: #fff;
 }
