--- a/game/css/layout.css
+++ b/game/css/layout.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+ul {
+  /*list-style-type: none;*/
+}
+
 #gui {
   position: absolute;
   left: 0;
@@ -17,7 +21,7 @@ body {
 
 #gameContainer {
   position: absolute;
-  top: 40px;
+  top: 41px;
   left: 174px;
   /* left: -224px; right: 0; */
   margin: auto;
@@ -28,10 +32,11 @@ body {
 
 #help {
   position: absolute;
-  top: 200px;
-  bottom: 29px;
-  right: 0;
-  width: 250px;
+  top: 42px;
+  left: 974px;
+  width: 395px;
+  height: 600px;
+  padding: 0 10px;
   background-color: #373d47;
   color: #fff;
 }
